# PROJ_601

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
recherche/: calculs.py  objet.py  point.py  triangle.py  wavefront.py
