[tool.poetry]
name = "recherche"
version = "0.1.0"
description = ""
authors = ["Poutchy <enzo.mauti@laposte.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
scipy = "^1.13.0"
matplotlib = "^3.8.4"
ipython = "^8.23.0"
sympy = "^1.12"
nose = "^1.3.7"
polyscope = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
